crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__control_cancel_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: req
---
{
  "type": "cancel",
  "slot": "550e8400-e29b-41d4-a716-446655440000"
}
