crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__control_failed_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "failed",
  "slot": "550e8400-e29b-41d4-a716-446655440000",
  "error": "segfault"
}
