crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__control_ready_with_schema_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "ready",
  "slots": [
    "550e8400-e29b-41d4-a716-446655440000"
  ],
  "schema": {
    "info": {
      "title": "Cog",
      "version": "0.1.0"
    },
    "openapi": "3.0.2"
  }
}
