crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__slot_cancelled_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "cancelled",
  "id": "pred_123"
}
