crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__slot_failed_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "failed",
  "id": "pred_123",
  "error": "ValueError: invalid input"
}
