crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__slot_log_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "log",
  "source": "stdout",
  "data": "Processing..."
}
