crates/coglet-bridge/src/snapshots/coglet_bridge__protocol__tests__slot_output_serializes.snap
---
source: coglet-bridge/src/protocol.rs
expression: resp
---
{
  "type": "output",
  "output": "chunk 1"
}
